# zepp-export

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: api-reference.md  mapping-guide.md
examples/: parse_traffic.py  pull_all_health_data.py
tests/: test_decoders.py  test_export.py  test_server.py
zepp_export/: __init__.py  __main__.py  cli.py  client.py  decoders.py  exceptions.py  export.py  server.py
zepp_export/dashboard/: index.html
zepp_export/dashboard/static/: activity.js  app.js  heart-rate.js  sleep.js  sport-load.js  stress.js  style.css  training-load.js  trimp.js
